--- a/html/index.html
+++ b/html/index.html
@@ -71,6 +71,7 @@
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
             <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
             <a href="about.html" class="btn btn-primary mt-3">Read More</a>
+            <a href="about.html" class="btn btn-primary mt-3">Read More</a>
           </div>
           <div class="col-lg-6 py-3 wow fadeInRight">
             <div class="img-fluid py-3 text-center">
