--- a/html/index.html
+++ b/html/index.html
@@ -64,14 +64,16 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 py-3 wow fadeInUp">
-            <span class="subhead">About us</span>
-            <h2 class="title-section">The number #1 SEO Service Company</h2>
+            
+            <h2 class="title-section">Seja uma modelo</br>
+              Feuer!</h2>
             <div class="divider"></div>
   
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-            <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-            <a href="about.html" class="btn btn-primary mt-3">Read More</a>
-            <a href="about.html" class="btn btn-primary mt-3">Read More</a>
+            <p>Venda seu material (fotos ou vídeos) e receba
+              ganhos acima de 3 mil reais.</p>
+            
+            <a href="about.html" class="btn btn-primary mt-3">SE CADASTRAR</a>
+            <a href="about.html" class="btn btn-primary mt-3">CONVERSAR VIA WHATSAPP</a>
           </div>
           <div class="col-lg-6 py-3 wow fadeInRight">
             <div class="img-fluid py-3 text-center">
