--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>SeoGram - SEO Agency Template</title>
+  <title>Feuer</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
@@ -77,7 +77,7 @@
           </div>
           <div class="col-lg-6 py-3 wow fadeInRight">
             <div class="img-fluid py-3 text-center">
-              <img src="../assets/img/about_frame.png" alt="">
+              <img src="../assets/img/imgMulherGrande.svg" alt="">
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
   <div class="page-section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <div class="card-service wow fadeInUp">
             <div class="header">
               <img src="../assets/img/services/service-1.svg" alt="">
@@ -123,7 +123,57 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
+          <div class="card-service wow fadeInUp">
+            <div class="header">
+              <img src="../assets/img/services/coin2.svg" alt="">
+            </div>
+            <div class="body">
+              <h5 class="text-secondary">Content Marketing</h5>
+              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <a href="service.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card-service wow fadeInUp">
+            <div class="header">
+              <img src="../assets/img/services/service-3.svg" alt="">
+            </div>
+            <div class="body">
+              <h5 class="text-secondary">Keyword Research</h5>
+              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <a href="service.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card-service wow fadeInUp">
+            <div class="header">
+              <img src="../assets/img/services/service-3.svg" alt="">
+            </div>
+            <div class="body">
+              <h5 class="text-secondary">Keyword Research</h5>
+              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <a href="service.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="card-service wow fadeInUp">
+            <div class="header">
+              <img src="../assets/img/services/service-1.svg" alt="">
+            </div>
+            <div class="body">
+              <h5 class="text-secondary">SEO Consultancy</h5>
+              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <a href="service.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
           <div class="card-service wow fadeInUp">
             <div class="header">
               <img src="../assets/img/services/service-2.svg" alt="">
@@ -135,7 +185,19 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
+          <div class="card-service wow fadeInUp">
+            <div class="header">
+              <img src="../assets/img/services/service-3.svg" alt="">
+            </div>
+            <div class="body">
+              <h5 class="text-secondary">Keyword Research</h5>
+              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <a href="service.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
           <div class="card-service wow fadeInUp">
             <div class="header">
               <img src="../assets/img/services/service-3.svg" alt="">
