--- a/html/index.html
+++ b/html/index.html
@@ -65,9 +65,6 @@
     <div class="page-section" id="about">
       <div class="container">
         <div class="row align-items-center">
-
-
-
           <div class="col-lg-6 py-3 wow fadeInUp">
             <h2 class="title-section">Seja uma modelo</br>Feuer!</h2>
             <div class="divider"></div>
@@ -84,13 +81,7 @@
               <a href="#" target="_blank"><img src="../assets/img/linkedin.svg" alt=""></a>
               <a href="#" target="_blank"><img src="../assets/img/instagram.svg" alt=""></a>              
             </div>
-            
-
-          </div>
-          
-
-
-
+          </div>  
 
           <div class="col-lg-6 py-3 wow fadeInRight">
             <div class="img-fluid py-3 text-center position-relative">
@@ -272,10 +263,10 @@
   
 
   
-
+<!-- comentar tudo -->
   
 
-  <div class="page-section bg-light">
+  <!-- <div class="page-section bg-light">
     <div class="container">
       <div class="text-center wow fadeInUp">
         <div class="subhead">Our services</div>
@@ -358,8 +349,8 @@
           </div>
         </div>
 
-    </div> <!-- .container -->
-  </div> <!-- .page-section -->
+    </div> 
+  </div> 
 
   <div class="page-section banner-seo-check">
     <div class="wrap bg-image" style="background-image: url(../assets/img/bg_pattern.svg);">
@@ -373,9 +364,9 @@
             </form>
           </div>
         </div>
-      </div> <!-- .container -->
-    </div> <!-- .wrap -->
-  </div> <!-- .page-section -->
+      </div> 
+    </div> 
+  </div>
 
   <div class="page-section">
     <div class="container">
@@ -455,10 +446,10 @@
         </div>
 
       </div>
-    </div> <!-- .container -->
-  </div> <!-- .page-section -->
+    </div>
+  </div>
 
-  <!-- Banner info -->
+
   <div class="page-section banner-info">
     <div class="wrap bg-image" style="background-image: url(../assets/img/bg_pattern.svg);">
       <div class="container">
@@ -486,10 +477,10 @@
           </div>
         </div>
       </div>
-    </div> <!-- .wrap -->
-  </div> <!-- .page-section -->
+    </div> 
+  </div> 
 
-  <!-- Blog -->
+
   <div class="page-section">
     <div class="container">
       <div class="text-center wow fadeInUp">
@@ -591,7 +582,10 @@
 
       <p class="text-center" id="copyright">Copyright &copy; 2020. This template design and develop by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
     </div>
-  </footer>
+  </footer> -->
+
+
+<!-- .descomentar tudo -->
 
 <script src="../assets/js/jquery-3.5.1.min.js"></script>
 
