alterando Nossos resultdos

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="subhead">O que nós já fizemos pelas nossas modelos.</div>
         <div class="divider mx-auto"></div>
       </div>
-      <div class="row" style="margin: 100px;">
+      <div class="row" >
         <div class="col-lg-3">
           <div class="card-service wow fadeInUp">
             
@@ -298,6 +298,7 @@
           </div>
         </div>
       </div>
+      <!--  segunda linha  -->
       <div class="row">
         <div class="col-lg-3">
           <div class="card-service wow fadeInUp">
