--- a/index.html
+++ b/index.html
@@ -511,14 +511,13 @@
 
   <footer class="ftco-footer">
     <div class="container">
-      <div class="row mb-5">
-        <div class="col-sm-12 col-md" style="align-items: center;">
-          <div class="ftco-footer-widget mb-4">
-            <img src="./assets/img/logo.svg" alt="">
-          </div>
-        </div>
-        
+      <div class="row mb-5">        
 
+        <div class="col-sm-12 col-md d-flex justify-content-center align-items-center">
+          <div class="ftco-footer-widget mb-4">
+              <img src="./assets/img/logo.svg" alt="" width="200">
+          </div>
+      </div>       
         
         <div class="col-sm-12 col-md">
           <div class="ftco-footer-widget mb-4 ml-md-4">
@@ -566,26 +565,16 @@
 
         <div class="col-sm-12 col-md">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">A Feuer</h2>
+            <h2 class="ftco-heading-2">A plataforma</h2>
             <div class="block-23 mb-3 ">
               <ul>
 
-
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Vantagens</a>
+                  <a class="nav-link" href="index.html">Entrar</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">Sobre nós</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">Perguntas e respostas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="blog.html">Resultados</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contato</a>
-                </li>
+                  <a class="nav-link" href="about.html">Se cadastrar</a>
+                </li>              
 
 
               </ul>
